[metadata]
name = eosc_perf
version = 0.1.0
description = Performance of European Open Science Cloud
description-file = README.md
authors = 
  Christophe Laures
  Valentin Kozlov
  Borja Esteban
authors_email = 
  C.Laures <christophe.misc+git@protonmail.ch>
  V.Kozlov <valentin.kozlov@kit.edu>
  B.Esteban Sanchis <borja.sanchis@kit.edu>
classifiers =
    License :: OSI Approved :: MIT License 
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires = 
  Flask==1.1.2
  Flask-SQLAlchemy==2.4.4
  uWSGI==2.0.19.1
  Authlib==0.14.3
  requests==2.24.0
  requests-html==0.10.0
  PyYAML==5.3.1
  markdown2==2.3.9
  aarc-g002-entitlement==0.2.1

scripts = 

