[metadata]
name = eosc_perf
author = Karlsruhe Institute of Technology - KIT
summary = Performance of European Open Science Cloud
description-file = README.md
description-content-type = text/markdown; charset=UTF-8; variant=GFM
home-page = https://github.com/EOSC-synergy/eosc-perf
license = MIT
classifiers =
    License :: OSI Approved :: MIT License 
    Programming Language :: Python :: 3.8

[files]
data_files =
  # A list of files to be installed
  # Use it to populate /etc/init.d

[entry_points]
console_scripts =
  eosc_perf = eosc_perf.flask_app:flask_app.run
pbr.config.drivers =
  # Additional scripts to be installed

