[metadata]
name = backend
author = Karlsruhe Institute of Technology - KIT
summary = Performance of European Open Science Cloud
description-file = README.md
description-content-type = text/markdown; charset=UTF-8; variant=GFM
home-page = https://github.com/EOSC-synergy/eosc-perf
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
